--- a/static/custom.css
+++ b/static/custom.css
@@ -24,3 +24,17 @@ a:visited { color: #1c388e }
 .gdoc-hint.info { background: #d1d7e8; border-color: #324b99; color: black; }
 .gdoc-hint.warning { background: #fef5dc; border-color: #e4ba48; color: black; }
 .gdoc-hint.danger { background: #fae1db; border-color: #cf5f46; color: black; }
+
+.clr-content-image-wrap {
+    display: inline-block;
+    border: 1px solid #485764;
+    border-radius: 0.125rem;
+    background-color: #ffffff;
+    color: #adbbc4;
+    margin-top: 1rem;
+    padding: 10px;
+    width: auto;
+}
+
+/* .clr-caption {
+} */
