--- a/themes/hugo-geekdoc/layouts/partials/foot.html
+++ b/themes/hugo-geekdoc/layouts/partials/foot.html
@@ -14,12 +14,4 @@
     });
 </script>
 {{ end }}
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-NN4VBNXV6M"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-NN4VBNXV6M');
-</script>
+{{ template "_internal/google_analytics.html" . }}
