--- a/themes/hugo-geekdoc/layouts/partials/menu-bundle.html
+++ b/themes/hugo-geekdoc/layouts/partials/menu-bundle.html
@@ -31,7 +31,8 @@
             <span class="flex">
                 {{ if $icon }}<svg class="icon {{ .icon }}"><use xlink:href="#{{ .icon }}"></use></svg>{{ end }}
                 <a href="{{ if .external }}{{ .ref }}{{ else }}{{ relref $current .ref }}{{ end }}"
-                    class="gdoc-nav__entry {{ if not .external }}{{ if $isCurrent }}is-active{{ end }}{{ end }}">
+                    class="gdoc-nav__entry {{ if not .external }}{{ if $isCurrent }}is-active{{ end }}{{ end }}"
+                    {{ if .external }}target="_blank"{{ end }}>
                     {{ .name }}
                 </a>
             </span>
