--- a/themes/hugo-geekdoc/layouts/partials/foot.html
+++ b/themes/hugo-geekdoc/layouts/partials/foot.html
@@ -15,3 +15,6 @@
 </script>
 {{ end }}
 {{ template "_internal/google_analytics.html" . }}
+
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<script src="/js/lightbox.min.js"></script>
