--- a/themes/hugo-geekdoc/layouts/shortcodes/hint.html
+++ b/themes/hugo-geekdoc/layouts/shortcodes/hint.html
@@ -1,3 +1,3 @@
-<blockquote class="gdoc-hint {{ .Get 0 }}">
+<blockquote class="hint {{ .Get 0 }}">
   {{ .Inner | $.Page.RenderString }}
 </blockquote>
