--- a/themes/hugo-theme-techdoc/layouts/partials/site-header.html
+++ b/themes/hugo-theme-techdoc/layouts/partials/site-header.html
@@ -1,4 +1,5 @@
 <header>
+<img class="header_image" src="{{ .Site.Params.logo }}" alt="" style="width: 36px;">
 <h1>{{ .Site.Title }}</h1>
 {{- with .Site.Params.version -}}
  <span class="version">Version {{ . }}</span>
