--- a/themes/hugo-theme-techdoc/layouts/partials/head.html
+++ b/themes/hugo-theme-techdoc/layouts/partials/head.html
@@ -14,7 +14,7 @@
 {{ hugo.Generator }}
 <link href="{{ .Site.BaseURL }}/index.xml" rel="alternate" type="application/rss+xml">
 <link rel="canonical" href="{{ .Permalink }}">
-<link rel="stylesheet" href="{{"css/theme.min.css" | absURL}}">
+<link rel="stylesheet" href="{{"css/theme.css" | absURL}}">
 <link rel="stylesheet" href="/css/lightbox.min.css">
 <link rel="stylesheet" href="/css/custom.css">
 <script src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
