--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -17,3 +17,17 @@ a:visited { color: #1c388e }
     padding: 10px;
     width: auto;
 }
+
+.header {
+    height: 80px;
+    padding: 5px;
+}
+
+.header-image {
+    float: left;
+    width: 80px;
+    height: 80px;
+}
+.header-h1 {
+    vertical-align: middle;
+}
