--- a/themes/hugo-theme-techdoc/layouts/partials/site-header.html
+++ b/themes/hugo-theme-techdoc/layouts/partials/site-header.html
@@ -1,13 +1,14 @@
 <header>
-<img class="header_image" src="{{ .Site.Params.logo }}" alt="" style="width: 36px;">
-<h1>{{ .Site.Title }}</h1>
-{{- with .Site.Params.version -}}
- <span class="version">Version {{ . }}</span>
-{{- end -}}
-{{- with .Site.Params.github_repository -}}
-<a href="{{ . }}" class="github"><i class="fab fa-github"></i></a>
-{{- end -}}
-{{ with .Site.Params.description }}
-<p class="description">{{ . }}</p>
-{{end}}
+    <div class="header-image">
+        <img src="{{ .Site.Params.logo }}" alt="{{ .Site.Title }}">
+    </div>
+    <div class="header">
+        <div class="header-h1">
+            <h1 class="header-h1">{{ .Site.Title }}</h1>
+        </div>
+        <div class="header-description">
+            {{ with .Site.Params.description }}<p class="description">{{ . }}</p>{{end}}
+        </div>
+    </div>
+
 </header>
